finished adding a fetch to the weather page i have setup

--- a/web-server/package.json
+++ b/web-server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "require": "^2.4.20",
+    "requirejs": "^2.3.6"
   }
 }
