--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "npm src/app.js"
   },
   "keywords": [],
   "author": "",
