new versions of all the relevant files. worked on this outside of the repository. copy/pasting new into old

--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "request": "^2.88.0",
     "require": "^2.4.20",
     "requirejs": "^2.3.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
