--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.10",
-    "mongoose": "^5.3.16"
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.18",
+    "validator": "^10.11.0"
   }
 }
