--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node pubilic/src/index.js",
-    "dev": "nodemon public/src/index.js"
+    "start": "node src/main.js",
+    "dev": "nodemon src/main.js"
   },
   "keywords": [],
   "author": "",
